--- a/users/templates/confirm_email.html
+++ b/users/templates/confirm_email.html
@@ -11,5 +11,5 @@
     <br />
     <hr />
     <p>Thanks for using our platform.</p>
-    <h2 style="color: rgb(0, 0, 0);">TomatoBurg Restaurent</h2>
+    <h2 style="color: rgb(0, 0, 0);">BestroBliss Restaurent</h2>
 </div>
